2008-11-15  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_evaluate_subexp): Improve handling of integer
	type dereferencing.

2008-11-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention sparc64-linux-gnu gdbserver support.

2008-11-14  Daniel Gutson  <dgutson@codesourcery.com>

	* configure.tgt (sparc64-*-linux*): Added gdbserver support.
	* regformats/reg-sparc64.dat: New file.

2008-11-14  Tom Tromey  <tromey@redhat.com>

	PR mi/2549:
	* mi/mi-main.c (get_register): Use get_formatted_print_options.

2008-11-13  Joel Brobecker  <brobecker@adacore.com>

	* printcmd.c: define PRINTF_HAS_LONG_LONG only if not yet defined.

2008-11-13  Ulrich Weigand  <uweigand@de.ibm.com>

	* auxv.c (fprint_target_auxv): Handle AT_BASE_PLATFORM and
	AT_EXECFN.  Re-sort AT_SECURE.

2008-11-13  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* monitor.c (monitor_insert_breakpoint): Remove unused variable `bp'.

2008-11-13  Joel Brobecker  <brobecker@adacore.com>

	* ia64-tdep.c: Remove commented out #define.

2008-11-12  Joel Brobecker  <brobecker@adacore.com>

	From Joel Sherrill  <joel.sherrill@oarcorp.com>
	* remote-sim.c (gdbsim_mourn_inferior): Use "target" parameter
	instead of the "gdbsim_ops" global.

2008-11-11  Doug Evans  <dje@google.com>

	* infcall.c (call_function_by_hand): Handle inferior exit.

2008-11-11  Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* remote-sim.c (gdbsim_create_inferior, gdbsim_mourn_inferior): Add
	missing struct target_ops argument.

2008-11-11  Joel Sherrill <joel.sherrilL@oarcorp.com>

	* MAINTAINERS: Add myself for write after approval privileges.

2008-11-10  Tom Tromey  <tromey@redhat.com>

	* gdbtypes.c (copy_type_recursive): Clear new fields.

2008-11-10  Tom Tromey  <tromey@redhat.com>

	* cli/cli-cmds.c (source_script): Clean up full_pathname.  Run
	cleanups on early return.

2008-11-09  Vladimir Prus  <vladimir@codesourcery.com>

	Kill pthread_ops_hack

	* target.h (struct target_ops): Make to_attach, to_detach,